# termplot

./: .gitignore  LICENSE  Main.hs  Makefile  README  Sysconf.hs  Sysconf.hsc  cabal.config  example.data  series.c  series.py  stack.yaml  term256colors.py  termplot.cabal  termplot.hs  termplot.py
src/: Main.hs
