name:                termplot
version:             0.1.0.0
synopsis:            Plot time series in your terminal using commands stdout
description:         Use unicode characters to plot fancy time series in real-time in your terminal.
homepage:            https://github.com/jimenezrick/termplot
license:             MIT
license-file:        LICENSE
author:              Ricardo Catalinas Jiménez <r@untroubled.be>
maintainer:          Ricardo Catalinas Jiménez <r@untroubled.be>
copyright:           Copyright (c) 2015 Ricardo Catalinas Jiménez
category:            Console
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

executable termplot
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , time-units >=1.0 && <1.1
                     , transformers >=0.4 && <0.5
                     , data-default >=0.5 && <0.6
                     , vty >=5.4 && <5.5
                     , brick >=0.2 && <0.3
                     , optparse-applicative >=0.12 && <0.13
                     , process >=1.2 && <1.3
                     , unix >=2.7 && <2.8
                     , split >=0.2 && <0.3
